# alaconfy

./: README.md  alacritty.toml  alacritty_macos.toml  alacritty_windows.toml  notes.md  pyproject.toml
src/aconfgen/: __init__.py  cli.py  errors.py  parser.py  scdoc.py  types.py
src/alaconfy/: model.py  render.py
tests/: conftest.py  test_cli.py  test_parser.py  test_render.py
