[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aconfgen"
version = "0.1.0"
description = "Generate complete default Alacritty configurations from its manpages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
]

[project.scripts]
aconfgen = "aconfgen.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ty>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aconfgen"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
