[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[project]
name = "alaconfy"
version = "0.1.0"
description = "Generate complete default Alacritty configurations from its manpages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.1", "pydantic>=2.7"]

[project.scripts]
alaconfy = "alaconfy.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "ty>=0.0.1"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
